--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,14 @@
 			</div>
 			<div class="business-content">
 				<h4 class="business-title"></h4>
-				<div class="business-rating"></div>
+				<div class="business-rating">
+					<img src="images/star-empty.png" />
+					<img src="images/star-empty.png" />
+					<img src="images/star-empty.png" />
+					<img src="images/star-empty.png" />
+					<img src="images/star-empty.png" />
+				
+				</div>
 				<p class="review-count"></p>
 				<div class="business-address"></div>
 			</div>
