--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
 <br>
 <br>
 <input id="search" placeholder="Enter Keyword"></input>
+<br>
+<div id="pages"></div>
+<br>
 <div id="businesses">
 	<div id="business-card">
 		<div class="container">
