Updated with the pages and prev and next buttons

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 <br>
 <input id="search" placeholder="Enter Keyword"></input>
 <br>
+<button id="prev-btn" type="button">Prev</button>
+<button id="next-btn" type="button">Next</button>
 <div id="pages"></div>
 <br>
 <div id="businesses">
